Fix box appearing half offscreen

--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 .controller.custom {
     background: url(stream_chat.png);
-    position: relative;
     width: 503px;
     height: 343px;
 }
